* overlay-fix.el from the semantic web site.                  *
*                                                             *
***************************************************************

* The JDEE has been updated to support the JDK 1.6 tool suite.

* Add jde-gen-makefile-buffer for creating Makefile.

* Add jde-make-find-build-file feature in jde-make.

* Fixed bugs in jde-run-parse-args: arguments quoted with single
  quotes were handled incorrectly; and quoted arguments were not
  having the quotes stripped.  Arguments containing whitespace should
  work now.

* When jde-expand-classpath-p is non-nil so that library classpath
  entries are expanded, this scanning now recursively includes
  subdirectories.

* Fixes for Emacs 22 compatibility: jde-run-etrace-goto.

JDE 2.3.5.1

* Fixes regressions in Documentation->Generate commands 
  caused by inadvertent double quoting of string options,
  e.g., jde-javadoc-gen-doc-title, on Windows.

* Fixes bug in jde-junit-run command that causes a Lisp error
  when the command is executed.

* Changes variables named assoc to assoc-x in the JDEE's Lisp
  code. This is intended to fix a "Symbol's value as variable is void:
  old-assoc" problem when debugging with the compiled version of JDE
  in xemacs/cygwin.

  Thanks to Henry S. Thompson.

* Fixes bug in jde-xref-make-xref-db command.

  Thanks to Jack Klebanoff.

* Updated compile commands to be compatible with new Emacs 
  policy of making compilation buffers read-only.

  Thanks to Martin Schwamberger.

* Update cedet version-checking to recognized prerelease
  designation.

* Emacs 22 compatibility fix: fix max-lisp-eval-depth error caused by 
  change in behavior of expand-file-name that breaks jde-root-dir-p. 

  Thanks to Phillip Lord [Phillip.Lord@newcastle.ac.uk].

* Added support for indenting Java annotations.

  Thanks to Suraj Acharya <sacharya@cs.indiana.edu>.

* Fixed jde-open-class-at-point to handle inner classes.
